# Rad1D

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  todo.txt
config/: params
doc/: FinalProjectReport.bib  FinalProjectReport.tex
examples/: example1.py
src/: NuModel.cpp  NuModel.hpp  RadModel.cpp  RadModel.hpp  blackbody.cpp  blackbody.hpp  constants.hpp  gaussianQuadrature.cpp  gaussianQuadrature.hpp  initialize.cpp  initialize.hpp  io.cpp  io.hpp  lambda.cpp  lambda.hpp  lambdaIterate.cpp  lambdaIterate.hpp  lineProfiles.cpp  lineProfiles.hpp  main.cpp  process.cpp  process.hpp  pybind.cpp  util.cpp  util.hpp
tests/: conftest.py  example.py  my_test.py  test_J_analytic.py  test_Teff.py  test_convergence.py  test_epsilon.py  test_params.py  test_quad.py  test_thermalization.py
tests/test_cpp/: test_main.cpp  test_main.hpp
